[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scenes/Hitboxes and Hurtboxes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/enemy/morea.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemy/Morea.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Enemy/AttackParticles.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Audio/moreadead.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/world/END-IMAGE.png" type="Texture" id=7]

[sub_resource type="Shader" id=8]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	vec4 white_color    = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )
shader_param/active = false

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20, 20.6667 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 24 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22, 22.5 )

[sub_resource type="Animation" id=4]
resource_name = "Attack"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 1.05 ), Vector2( 1, 1 ), Vector2( 1.1, 1.05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 5.0, 0.0, -5.0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Blink"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hurtbox/CollisionShape2D:shape")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ SubResource( 3 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:material:shader_param/active")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
resource_name = "Slam"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 0.95 ), Vector2( 1.15, 0.9 ), Vector2( 1.5, 0.8 ), Vector2( 1.2, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/active")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=11]
resource_name = "StopBlink"
length = 0.01
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.97, 0.95 ) ]
}

[node name="Morea" type="KinematicBody2D"]
position = Vector2( 200, 200 )
scale = Vector2( 1.5, 1.5 )
collision_layer = 16
script = ExtResource( 4 )
ROTATE_SPEED = 89
SHOT_TIMER_WAIT_TIME = 0.1
SPAWN_POINT_COUNT = 2

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 9 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.05176e-05, -3.05176e-05 )
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -1.33334 )
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2( -3.05176e-05, 1.33334 )
shape = SubResource( 2 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -0.166687 )
shape = SubResource( 3 )

[node name="Rotator" type="Node2D" parent="."]

[node name="ShotTimer" type="Timer" parent="."]

[node name="StateDuration" type="Timer" parent="."]

[node name="AttackParticles" parent="." instance=ExtResource( 5 )]
scale = Vector2( 0.2, 0.2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 4 )
anims/Blink = SubResource( 10 )
anims/RESET = SubResource( 5 )
anims/Slam = SubResource( 6 )
anims/StopBlink = SubResource( 11 )
anims/idle = SubResource( 7 )

[node name="TelegraphTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="SlamDelay" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="MoreaDeathNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )

[node name="WinSprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 7 )

[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="timeout" from="StateDuration" to="." method="_on_StateDuration_timeout"]
[connection signal="timeout" from="TelegraphTimer" to="." method="_on_TelegraphTimer_timeout"]
[connection signal="timeout" from="SlamDelay" to="." method="_on_SlamDelay_timeout"]

[editable path="Hitbox"]
[editable path="Hurtbox"]
